apps/helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-dotnet
  namespace: dev
spec:
  ingressClassName: public
  rules:
    - host: helloworld.192.168.10.4.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
